Bug 460946 - getBoundingClientRect on rotated svgElement with stroke is incorrect. r+sr=roc